BlockAspect data is now sourced from block_aspect.tablist